--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>TinDog</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Ubuntu&display=swap" rel="stylesheet">
 <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -43,8 +43,8 @@
     <div class="row">
 	<div class="col-md-6">
       <h1>Meet new and interesting dogs nearby.</h1>
-<button type="button" class="btn btn-secondary"><i class="fab fa-apple"></i> Download</button>
-<button type="button" class="btn btn-outline-light"><i class="fab fa-google-play"></i> Download</button>
+<button type="button" class="btn btn-secondary download"><i class="fab fa-apple"></i> Download</button>
+<button type="button" class="btn btn-outline-light download"><i class="fab fa-google-play"></i> Download</button>
     </div>
     <div class="col-md-6">
       <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
@@ -58,41 +58,57 @@
   <!-- Features -->
 
   <section id="features">
-
+<div class="row">
+<div class="col-lg-4 feat-item feat-icons fa-3x">
+  <i class="fas fa-check-circle"></i>
     <h3>Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
-
+    </div>
+<div class="col-lg-4 feat-item feat-icons fa-3x">
+  <i class="fas fa-bullseye"></i>
     <h3>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
-
+    </div>
+<div class="col-lg-4 feat-item feat-icons fa-3x">
+  <i class="fas fa-heart"></i>
     <h3>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
-
+</div>
   </section>
 
 
   <!-- Testimonials -->
 
   <section id="testimonials">
-
+    <div id="main-carousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+          <div class="carousel-item active">
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <img class="d-block w-10 car-img" src="images/dog-img.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
+    </div>
+    <div class="carousel-item">
+<h2>My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+      <img class="d-block w-10 car-img" src="images/lady-img.jpg" alt="lady-profile">
+      <em>Beverly, Illinois</em>
+    </div></div>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
-  </section>
-
-
+    <a class="carousel-control-prev" href="#main-carousel" role="button" data-slide="prev">
+     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+     <span class="sr-only">Previous</span>
+   </a>
+   <a class="carousel-control-next" href="#main-carousel" role="button" data-slide="next">
+     <span class="carousel-control-next-icon" aria-hidden="true"></span>
+     <span class="sr-only">Next</span>
+   </a>
+   </section>
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-size" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-size" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-size" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-size" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -100,34 +116,37 @@
   <!-- Pricing -->
 
   <section id="pricing">
-
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
+    <div class="row">
+      <div class="col-lg-4 col-md-6 price-col card">
+    <h3 class="card-header">Chihuahua</h3>
+    <div class="card-body">
+      <h2>Free</h2>
+      <p>5 Matches Per Day</p>
+      <p>10 Messages Per Day</p>
+      <p>Unlimited App Usage</p>
+    <a href="#" class="btn btn-outline-dark">Sign Up</a>
+  </div></div>
+  <div class="col-lg-4 col-md-6 price-col card">
+  <h3 class="card-header">Labrador</h3>
+  <div class="card-body">
     <h2>$49 / mo</h2>
     <p>Unlimited Matches</p>
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+<a href="#" class="btn btn-secondary">Sign Up</a>
+</div></div>
+    <div class="col-lg-4 col-md-6 price-col card">
+    <h3 class="card-header">Mastiff</h3>
+    <div class="card-body">
+<h2>$99 / mo</h2>
+<p>Pirority Listing</p>
+<p>Unlimited Matches</p>
+<p>Unlimited Messages</p>
+<p>Unlimited App Usage</p>
+<a href="#" class="btn btn-secondary">Sign Up</a>
+</div></div>
 
   </section>
 
@@ -136,23 +155,27 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+    <h4>Find the True Love of Your Dog's Life Today.</h4>
+    <button type="button" class="btn btn-secondary download"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light download"><i class="fab fa-google-play"></i> Download</button>
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
+<footer id="footer">
+<a href="#"><i class="fab fa-twitter"></i></a>
+<a href="#"><i class="fab fa-facebook"></i></a>
+<a href="#"><i class="fab fa-instagram"></i></a>
+<a href="#"><i class="far fa-envelope"></i></a>
+<p>© Copyright 2019 TinDog</p>
 
   </footer>
 
 
 </body>
+
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
