--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
-      <div class="col-lg-4 col-md-6 price-col card">
+
+      <div class="col-lg-4 col-md-6 price-table">
+              <div class="card">
     <h3 class="card-header">Chihuahua</h3>
     <div class="card-body">
       <h2>Free</h2>
@@ -127,8 +129,13 @@
       <p>10 Messages Per Day</p>
       <p>Unlimited App Usage</p>
     <a href="#" class="btn btn-outline-dark">Sign Up</a>
-  </div></div>
-  <div class="col-lg-4 col-md-6 price-col card">
+  </div>
+</div>
+</div>
+
+
+  <div class="col-lg-4 col-md-6 price-table">
+      <div class="card">
   <h3 class="card-header">Labrador</h3>
   <div class="card-body">
     <h2>$49 / mo</h2>
@@ -136,8 +143,12 @@
     <p>Unlimited Messages</p>
     <p>Unlimited App Usage</p>
 <a href="#" class="btn btn-secondary">Sign Up</a>
-</div></div>
-    <div class="col-lg-4 col-md-6 price-col card">
+</div>
+</div>
+  </div>
+
+    <div class="col-lg-4 col-md-6 price-table">
+        <div class="card">
     <h3 class="card-header">Mastiff</h3>
     <div class="card-body">
 <h2>$99 / mo</h2>
@@ -146,8 +157,10 @@
 <p>Unlimited Messages</p>
 <p>Unlimited App Usage</p>
 <a href="#" class="btn btn-secondary">Sign Up</a>
-</div></div>
-
+</div>
+</div>
+</div>
+</div>
   </section>
 
 
