--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <section id="title">
-
+    <div class="container-fluid">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#">Tindog</a>
@@ -35,11 +35,7 @@
         </ul>
       </div>
     </nav>
-
-
-
     <!-- Title -->
-<div class="container-fluid" style="background-color:#ff4c68">
     <div class="row">
 	<div class="col-md-6">
       <h1>Meet new and interesting dogs nearby.</h1>
@@ -49,12 +45,9 @@
     <div class="col-md-6">
       <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
     </div>
-	</div>
+	</div></div>
 
   </section>
-
-</div>
-
   <!-- Features -->
 
   <section id="features">
@@ -111,56 +104,45 @@
     <img class="press-size" src="images/mashable.png" alt="mashable-logo">
 
   </section>
-
-
   <!-- Pricing -->
 
   <section id="pricing">
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-    <div class="row">
-
-      <div class="col-lg-4 col-md-6 price-table">
-              <div class="card">
-    <h3 class="card-header">Chihuahua</h3>
-    <div class="card-body">
-      <h2>Free</h2>
-      <p>5 Matches Per Day</p>
-      <p>10 Messages Per Day</p>
-      <p>Unlimited App Usage</p>
-    <a href="#" class="btn btn-outline-dark">Sign Up</a>
-  </div>
-</div>
-</div>
-
-
-  <div class="col-lg-4 col-md-6 price-table">
-      <div class="card">
-  <h3 class="card-header">Labrador</h3>
-  <div class="card-body">
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-<a href="#" class="btn btn-secondary">Sign Up</a>
-</div>
-</div>
-  </div>
-
-    <div class="col-lg-4 col-md-6 price-table">
+      <div class="card-deck">
         <div class="card">
-    <h3 class="card-header">Mastiff</h3>
-    <div class="card-body">
-<h2>$99 / mo</h2>
-<p>Pirority Listing</p>
-<p>Unlimited Matches</p>
-<p>Unlimited Messages</p>
-<p>Unlimited App Usage</p>
-<a href="#" class="btn btn-secondary">Sign Up</a>
-</div>
-</div>
-</div>
-</div>
+          <div class="card-body">
+            <h3 class="card-header">Chihuahua</h3>
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <a href="#" class="btn btn-outline-dark">Sign Up</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+              <h3 class="card-header">Labrador</h3>
+              <h2>$49 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+          <a href="#" class="btn btn-secondary">Sign Up</a>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+        <h3 class="card-header">Mastiff</h3>
+            <h2>$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <a href="#" class="btn btn-secondary">Sign Up</a>
+          </div>
+        </div>
+      </div>
+
   </section>
 
 
