--- a/index.html
+++ b/index.html
@@ -163,10 +163,8 @@
 <a href="#"><i class="fab fa-facebook"></i></a>
 <a href="#"><i class="fab fa-instagram"></i></a>
 <a href="#"><i class="far fa-envelope"></i></a>
-<p>© Copyright 2019 TinDog</p>
-
   </footer>
-
+<p class="copyright">© Copyright 2019 TinDog</p>
 
 </body>
 
